--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 12:05:03 2018</p>
+         Last Run: Sat Nov  3 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,18 +34,18 @@
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>49</td>
                         <td>1</td>
                         <td>14</td>
@@ -57,12 +57,12 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>24</td>
+                        <td>8</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>71</td>
+                        <td>14</td>
+                        <td>NNW</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "19",
-                 "24"
+                 "21",
+                 "8"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "54",
                  "49",
                  "48"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
+                 "95",
                  "74",
-                 "71"
+                 "72"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 12:05:03 2018</p>
+         Last Run: Sat Nov  3 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,11 +247,11 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>6</td>
+                        <td>-8</td>
+                        <td>12</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>ENE</td>
                         <td>90</td>
                      </tr>
@@ -260,24 +260,24 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>7</td>
+                        <td>5</td>
                         <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>89</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>5</td>
+                        <td>3</td>
                         <td>74</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>88</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-8",
                  "-8"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "7",
-                 "5"
+                 "12",
+                 "5",
+                 "3"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "90",
-                 "89",
-                 "88"
+                 "91",
+                 "90"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 12:05:03 2018</p>
+         Last Run: Sat Nov  3 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,12 +463,12 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>1</td>
+                        <td>WSW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "3",
                  "4",
                  "4"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "73",
                  "72",
-                 "72",
-                 "74"
+                 "75"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "11",
+                 "9",
+                 "8"
                ]
              }
            ]
