--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 16:05:03 2018</p>
+         Last Run: Sat Nov  3 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>12</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>96</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>10</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>83</td>
+                        <td>14</td>
+                        <td>NNW</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>15</td>
+                        <td>14</td>
                         <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "12",
                  "10",
-                 "15"
+                 "14"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "54",
                  "51",
                  "50"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "83",
-                 "77"
+                 "92",
+                 "92",
+                 "85"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 16:05:03 2018</p>
+         Last Run: Sat Nov  3 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>20</td>
-                        <td>71</td>
+                        <td>19</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
@@ -261,10 +261,10 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>12</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
+                        <td>E</td>
                         <td>91</td>
                      </tr>
                      <tr>
@@ -273,11 +273,11 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>90</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
+                 "19",
                  "12",
                  "5"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "72",
-                 "73"
+                 "69",
+                 "70",
+                 "72"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "92",
                  "91",
-                 "90"
+                 "88"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 16:05:03 2018</p>
+         Last Run: Sat Nov  3 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>66</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>12</td>
                      </tr>
                      <tr>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "4",
                  "4"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "68",
                  "71"
                ]
