--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 17:05:03 2018</p>
+         Last Run: Sat Nov  3 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,19 +33,19 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>12</td>
+                        <td>4</td>
                         <td>54</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>6</td>
-                        <td>10</td>
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
@@ -57,10 +57,10 @@
                         <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>14</td>
+                        <td>17</td>
                         <td>50</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
                         <td>85</td>
                      </tr>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "6",
+                 "9",
                  "9"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "8",
+                 "9",
                  "9"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "10",
-                 "14"
+                 "4",
+                 "6",
+                 "17"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 17:05:03 2018</p>
+         Last Run: Sat Nov  3 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>19</td>
-                        <td>69</td>
+                        <td>14</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
@@ -260,8 +260,8 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>12</td>
-                        <td>70</td>
+                        <td>11</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
@@ -272,12 +272,12 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>5</td>
-                        <td>72</td>
+                        <td>10</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "12",
-                 "5"
+                 "14",
+                 "11",
+                 "10"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "67",
                  "69",
-                 "70",
-                 "72"
+                 "71"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "92",
                  "91",
-                 "88"
+                 "89"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 17:05:03 2018</p>
+         Last Run: Sat Nov  3 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "3",
                  "4",
                  "4"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "66",
                  "68",
                  "71"
                ]
